--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.1.1",
     "jade": "*",
     "mocha": "~1.9.0",
-    "mongoose": "~3.6.8"
+    "mongoose": "~3.6.8",
+    "should": "~1.2.2"
   }
 }
