--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "jade": "*",
     "mocha": "~1.9.0",
     "mongoose": "~3.6.8",
-    "should": "~1.2.2"
+    "should": "~1.2.2",
+    "config": "~0.4.24",
+    "async": "~0.2.7"
   }
 }
